--- a/www/app/spot/spot.html
+++ b/www/app/spot/spot.html
@@ -21,55 +21,55 @@ navigation history that also transitions its views in and out.
   <ion-scroll direction='x' class='wide-as-needed'>
     <a class='button button-clear spot-tab-inactive'
        ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.spot"}'
-       ng-click='vm.submit("/app/spotTab/" + vm.data.id + "/spot")'>
+       ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/spot")'>
       Spot
     </a>
     <span ng-show='vm.showTab("orientation")'>
       <a class='button button-clear spot-tab-inactive'
          ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.orientation-data"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.data.id + "/orientation-data")'>
+         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/orientation-data")'>
         Orientation
       </a>
     </span>
     <span ng-show='vm.showTab("_3dstructures")'>
       <a class='button button-clear spot-tab-inactive'
          ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab._3dstructures"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.data.id + "/_3dstructures");'>
+         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/_3dstructures");'>
         3D Structures
       </a>
     </span>
         <span ng-show='vm.showTab("other_features")'>
       <a class='button button-clear spot-tab-inactive'
          ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.other-features"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.data.id + "/other-features");'>
+         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/other-features");'>
         Other Features
       </a>
     </span>
     <span ng-show='vm.showTab("images")'>
       <a class='button button-clear spot-tab-inactive'
          ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.images"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.data.id + "/images");'>
+         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/images");'>
         Images
       </a>
     </span>
-    <span ng-show='vm.showTab("sample")'>
+    <span ng-show='vm.showTab("samples")'>
       <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.sample"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.data.id + "/sample");'>
-        Sample
+         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.samples"}'
+         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/samples");'>
+        Samples
       </a>
     </span>
     <span ng-show='vm.showTab("inferences")'>
       <a class='button button-clear spot-tab-inactive'
          ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.inferences"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.data.id + "/inferences");'>
+         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/inferences");'>
         Inferences
       </a>
     </span>
     <span ng-show='vm.showTab("nest")'>
       <a class='button button-clear spot-tab-inactive'
          ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.nest"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.data.id + "/nest");'>
+         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/nest");'>
         Nest
       </a>
     </span>
