--- a/www/index.html
+++ b/www/index.html
@@ -85,7 +85,7 @@
     <script src="app/spot/orientation.controller.js"></script>
     <script src="app/spot/orientation-data-tab.controller.js"></script>
     <script src="app/spot/other-features-tab.controller.js"></script>
-    <script src="app/spot/sample-tab.controller.js"></script>
+    <script src="app/spot/samples-tab.controller.js"></script>
     <script src="app/spot/spot-tab.controller.js"></script>
 
     <!-- ng factories -->
