--- a/www/app/spot/inferences-tab.html
+++ b/www/app/spot/inferences-tab.html
@@ -48,8 +48,8 @@
                     ng-click='vmChild.editRelationship($index)'
                     ng-repeat='relationship in vm.spot.properties.inferences.relationships'>
             {{ relationship.observationA }}
-            <span ng-hide='relationship.relationship === "other"'>{{ relationship.relationship }}</span>
-            <span ng-show='relationship.relationship === "other"'>{{ relationship.other_relationship }}</span>
+            <span ng-hide='relationship.relationship_type === "other"'>{{ relationship.relationship_type }}</span>
+            <span ng-show='relationship.relationship_type === "other"'>{{ relationship.other_relationship }}</span>
             {{ relationship.observationB }}
             <span ng-show='relationship.deformation_event'><br><small>Deformation Event: {{
               relationship.deformation_event }}
