minor fixes: clearing spots list, making relationships only between 2 or more observations, note for nesting

--- a/www/app/spot/nest-tab.html
+++ b/www/app/spot/nest-tab.html
@@ -1,40 +1,47 @@
 <ion-view>
   <ion-content class='strabo-form'>
-
-    <div ng-show='vmChild.parentSpot'>
-      <button ng-click='vmChild.goToSpot(vmChild.parentSpot.properties.id)'
-              class='button button-clear button-positive'>
-        <i class='icon ion-eye'></i>
-        <span class='button-text-big'>{{ vmChild.parentSpot.properties.name }}</span>
-      </button>
+    <div class='padding'>
+      Nests are still in development! Currently Nests can only be made through Image Basemaps.
     </div>
+    <div class='padding' ng-hide='vmChild.parentSpot || vmChild.childrenSpots.length > 0'>
+      No Nest has been created yet. Add a Spot to an Image Basemap to view Nest.
+    </div>
+    <div ng-show='vmChild.parentSpot || vmChild.childrenSpots.length > 0'>
+      <div ng-show='vmChild.parentSpot'>
+        <button ng-click='vmChild.goToSpot(vmChild.parentSpot.properties.id)'
+                class='button button-clear button-positive'>
+          <i class='icon ion-eye'></i>
+          <span class='button-text-big'>{{ vmChild.parentSpot.properties.name }}</span>
+        </button>
+      </div>
 
-    <div class='padding' ng-show='vmChild.parentSpot || vmChild.childrenSpots.length > 0'>
+      <div class='padding'>
       <span ng-show='vmChild.parentSpot'>
         <i class='ion-arrow-up-c'></i>
         <br><br>
       </span>
-      This Spot
+        This Spot
       <span ng-show='vmChild.childrenSpots.length > 0'>
         <br><br>
        <i class='ion-arrow-down-c'></i>
       </span>
-    </div>
+      </div>
 
-    <div ng-repeat='childSpot in vmChild.childrenSpots' ng-show='vmChild.childrenSpots.length > 0'>
-      <button ng-click='vmChild.goToSpot(childSpot.properties.id)'
-              class='button button-clear button-positive'>
-        <i class='icon ion-eye'></i>
-        <span class='button-text-big'>{{ childSpot.properties.name }}</span>
-      </button>
-    </div>
+      <div ng-repeat='childSpot in vmChild.childrenSpots'>
+        <button ng-click='vmChild.goToSpot(childSpot.properties.id)'
+                class='button button-clear button-positive'>
+          <i class='icon ion-eye'></i>
+          <span class='button-text-big'>{{ childSpot.properties.name }}</span>
+        </button>
+      </div>
 
-    <div class='item item-divider'>
-      Notes
-    </div>
-    <ion-input class='item item-input'>
+      <div class='item item-divider'>
+        Notes
+      </div>
+      <ion-input class='item item-input'>
       <textarea placeholder='Notes about this nest ...' rows='12'
-                ng-model='vm.spot.properties.nest_notes'></textarea>
-    </ion-input>
+                ng-model='vm.spot.properties.nest.notes'></textarea>
+      </ion-input>
+    </div>
   </ion-content>
 </ion-view>
