Debug menu item renamed to Miscellaneous. Generate a data model for a Spot and allow the user to view it from the Miscellaneous page.

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -75,7 +75,7 @@
           Help
         </div>
         <ion-item nav-clear menu-close href='#/app/debug'>
-          Random Spots
+          Miscellaneous
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/about'>
           About Strabo
