--- a/www/app/debug/debug.html
+++ b/www/app/debug/debug.html
@@ -1,25 +1,40 @@
-<ion-view title='Random Spots'>
+<ion-view title='Miscellaneous'>
 
   <ion-nav-buttons side='left'>
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
 
-  <ion-content class='has-header strabo-form'>
-    <ion-input class='item item-input item-stacked-label'>
-      <ion-label>Number of random Spots to generate:</ion-label>
+  <ion-content class='has-header'>
+    <div class='field-group item item-divider'>
+      Generate Random Spots
+    </div>
+    <div class='padding'>
+      Create a number of random points with random planar orientations ...
+    </div>
+    <ion-input class='item item-input'>
+      <ion-label>Number of Spots:</ion-label>
       <input type='number' ng-model='vm.pointsToGenerate' value={{vm.pointsToGenerate}} placeholder='How many Spots?'>
     </ion-input>
-    <div class='padding'>
-      <button ng-click='vm.submit(vm.pointsToGenerate)'
-              class='button button-clear button-positive'>
-        <i class='icon ion-grid'></i>
-        <span class='button-text-big'>Generate Spots</span>
-      </button>
-    </div>
+    <button ng-click='vm.submit(vm.pointsToGenerate)'
+            class='button button-clear button-positive padding-left'>
+      <i class='icon ion-grid'></i>
+      <span class='button-text-big'>Start</span>
+    </button>
 
     <div class='padding' ng-show='vm.pointsGenerated'>
-      <hr>
       Points generated: {{ vm.pointsGenerated }}
     </div>
+
+    <div class='field-group item item-divider'>
+      View Spot Data Model
+    </div>
+    <div class='padding'>
+      View all possible Spot fields and field definitions ...
+    </div>
+    <button ng-click='vm.getSpotDataModel()'
+            class='button button-clear button-positive padding-left'>
+      <i class='icon ion-document-text'></i>
+      <span class='button-text-big'>Open</span>
+    </button>
   </ion-content>
 </ion-view>
