use the new data models object created in previous commit, removed old data models object,  use data models object for images

--- a/www/app/spot/image-properties-modal.html
+++ b/www/app/spot/image-properties-modal.html
@@ -6,45 +6,11 @@
     </div>
     <h1 class='title'>Image Properties</h1>
     <div class="buttons">
-      <button ng-click='vmChild.deleteImage(vmChild.currentImage);'
+      <button ng-click='vmChild.deleteImage();'
               class='button button-icon icon ion-trash-b'></button>
     </div>
   </ion-header-bar>
   <ion-content class='has-header strabo-form'>
-    <div class='field-group item item-divider'>
-      Image Data
-    </div>
-    <ion-input class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>Image Name</ion-label>
-      <input type='text' ng-model='vmChild.currentImage.title' placeholder='Also image basemap name (if applicable)'>
-    </ion-input>
-    <ion-input class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>Image Description</ion-label>
-      <textarea placeholder='Write a description of the image here ...' rows='4' ng-model='vmChild.currentImage.caption'></textarea>
-    </ion-input>
-    <ion-input class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>Scale of Overall Image</ion-label>
-      <input type='text' ng-model='vmChild.currentImage.scale_of_image'>
-    </ion-input>
-    <ion-input class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>Scale and type of object in image (m)</ion-label>
-      <input type='text' ng-model='vmChild.currentImage.scale_object'>
-    </ion-input>
-    <div class='field-group item item-divider'>
-      Camera Orientation
-    </div>
-    <ion-input class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>View azimuth (trend)</ion-label>
-      <input type='number' ng-model='vmChild.currentImage.view_azimuth_trend'>
-    </ion-input>
-    <ion-input class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>View angle (plunge)</ion-label>
-      <input type='number' ng-model='vmChild.currentImage.view_angle_plunge'>
-    </ion-input>
-    <ion-input class='item item-input item-stacked-label item-text-wrap'>
-      <ion-label>Orientation of View Subject</ion-label>
-      <input type='text' ng-model='vmChild.currentImage.orientation_of_view_subject'
-             placeholder='e.g., facing direction of cliff face'>
-    </ion-input>
+    <auto-fields></auto-fields>
   </ion-content>
 </ion-modal-view>
