--- a/www/app/map/archive-tiles.html
+++ b/www/app/map/archive-tiles.html
@@ -9,10 +9,10 @@
       <input type='text' ng-model='vm.map.name' autofocus>
     </ion-input>
 
-    <ion-checkbox ng-model='vm.map.downloadMacrostrat' ng-show='vm.map.showDownloadMacrostrat'
+    <!-- <ion-checkbox ng-model='vm.map.downloadMacrostrat' ng-show='vm.map.showDownloadMacrostrat'
                   ng-change='vm.estimateArchiveTile()'>
       Download Macrostrat-Geologic tiles too?
-    </ion-checkbox>
+    </ion-checkbox> -->
 
     <ion-checkbox ng-model='vm.map.downloadZooms' ng-show='vm.map.showDownloadInnerZooms'
                   ng-change='vm.estimateArchiveTile()'>
