put images under spot.properties instead of it being a root element

--- a/www/app/spot/images-modal.html
+++ b/www/app/spot/images-modal.html
@@ -1,6 +1,6 @@
 <div class='modal image-modal'>
   <ion-slide-box on-slide-changed='slideChanged(index)' show-pager='true' active-slide='vmChild.activeSlide'>
-    <ion-slide ng-repeat='image in vm.spot.images'>
+    <ion-slide ng-repeat='image in vm.spot.properties.images'>
       <img ng-src='{{image.src}}' class='fullscreen-image' ng-click='vmChild.closeImageModal()'/>
       <textarea rows='3' class='image-modal-textarea' ng-model='image.caption'
                 placeholder='Image description ...'></textarea>
