--- a/www/app/remote-connection/sync-modal.html
+++ b/www/app/remote-connection/sync-modal.html
@@ -1,17 +1,13 @@
-<ion-modal-view>
+<ion-modal-view ng-controller='SyncModalController as vmChild'>
   <ion-header-bar class='bar-dark nav-title-slide-ios7'>
     <h1 class='title'>Sync Spots with Strabo Database</h1>
-    <div class='button button-clear' ng-click='vm.closeModal("syncModal")'><span class='icon ion-close'></span></div>
+    <div class='button button-clear' ng-click='vmChild.closeModal("syncModal")'><span class='icon ion-close'></span></div>
   </ion-header-bar>
-  <ion-content class='has-header' ng-controller='SyncModalController as vmChild'>
+  <ion-content class='has-header'>
     <div class='padding'>
       <small>You are currently logged in as: {{ vmChild.loginEmail }}</small>
     </div>
-    <div ng-show='vmChild.progress.showProgress'>You are uploading spot {{ vmChild.progress.current }} of {{
-      vmChild.progress.total
-      }}
-    </div>
-    <div ng-show='vmChild.showDatasetOpts() && !vmChild.progress.showProgress' class='strabo-form'>
+    <div ng-show='vmChild.showDatasetOpts()'' class='strabo-form'>
       <div class='list'>
         <div>
           <!-- List Current Datasets -->
@@ -62,14 +58,22 @@
         </div>
       </div>
     </div>
-    <div class='padding' ng-show='vmChild.progress.showUploadDone'>
-      Finished uploading spots to Dataset <b>{{ vmChild.dataset.name }}</b> on the server.
-    </div>
-    <div class='padding' ng-show='vmChild.progress.showDownloadDone'>
-      Finished downloading spots from Dataset <b>{{ vmChild.dataset.name}}</b> on the server.
-    </div>
-    <div class='padding' >
-      {{ vmChild.downloadProgress }}
+    <div class='padding'>
+      <div ng-show='vmChild.progress.showUploadProgress'>
+        You are uploading spot {{ vmChild.progress.current }} of {{ vmChild.progress.total}}
+      </div>
+      <div ng-show='vmChild.progress.showUploadDone'>
+        Finished uploading spots to Dataset <b>{{ vmChild.dataset.name }}</b> on the server.
+      </div>
+      <div ng-show='vmChild.progress.showDownloadProgress'>
+        Downloading spot {{ vmChild.progress.current }} of {{ vmChild.progress.total }}
+      </div>
+      <div ng-show='vmChild.progress.showDownloadDone'>
+        Finished downloading spots from Dataset <b>{{ vmChild.dataset.name}}</b> on the server.
+      </div>
+      <div ng-show='vmChild.progress.errors'>
+        {{ vmChild.progress.errors }}
+      </div>
     </div>
   </ion-content>
 </ion-modal-view>
