rock units and other features in new manage project page

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -56,14 +56,14 @@
         <div class='field-group item item-divider'>
           Project
         </div>
+        <ion-item nav-clear menu-close href='#/app/manage-project'>
+          Manage
+        </ion-item>
         <ion-item nav-clear menu-close href='#/app/project'>
           Description
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/daily-setup'>
           Daily Setup
-        </ion-item>
-        <ion-item nav-clear menu-close href='#/app/rock-units'>
-          Rock Units
         </ion-item>
         <ion-item nav-clear menu-close href='#/app/tools'>
           Tools
