--- a/www/index.html
+++ b/www/index.html
@@ -65,11 +65,11 @@
     <script src="app/map/map.controller.js"></script>
     <script src="app/map/offline-map.controller.js"></script>
     <script src="app/menu/menu.controller.js"></script>
+    <script src="app/project/manage-project.controller.js"></script>
     <script src="app/project/preferences.controller.js"></script>
     <script src="app/project/project.controller.js"></script>
     <script src="app/project/projects.controller.js"></script>
     <script src="app/project/rock-unit.controller.js"></script>
-    <script src="app/project/rock-units.controller.js"></script>
     <script src="app/project/tools.controller.js"></script>
     <script src="app/remote-connection/sync-modal.controller.js"></script>
     <script src="app/spot/spot.controller.js"></script>
