--- a/www/app/project/rock-unit.html
+++ b/www/app/project/rock-unit.html
@@ -1,7 +1,7 @@
 <form name='straboForm' novalidate=''>
   <ion-view title='Rock Unit Description'>
     <ion-nav-buttons side='left'>
-      <button ng-hide='vm.currentSpot' ng-click='vm.submit("/app/rock-units");'
+      <button ng-hide='vm.currentSpot' ng-click='vm.submit("/app/manage-project");'
               class='button button-icon icon ion-arrow-left-c'></button>
       <button ng-show='vm.currentSpot' ng-click='vm.submit("/app/spotTab/" + vm.currentSpot.properties.id + "/spot");'
               class='button button-icon icon ion-arrow-left-c'></button>
