--- a/www/app/map/map.html
+++ b/www/app/map/map.html
@@ -8,7 +8,7 @@
   <ion-nav-buttons side='right'>
     <button ng-hide='vm.currentSpot' ng-click='vm.toggleLocation()'
             ng-class='{"button button-icon icon ion-pinpoint": !vm.locationOn, "button button-icon icon ion-android-locate": vm.locationOn}'></button>
-    <button ng-hide='vm.currentSpot' ng-click='vm.showActionsheet()'
+    <button ng-click='vm.showActionsheet()'
             class='button button-icon icon ion-arrow-up-b'></button>
     <div ng-class='{"online": vm.isOnline(), "offline": !vm.isOnline()}'></div>
     </ion-nav-buttons>
