--- a/www/app/user/user.html
+++ b/www/app/user/user.html
@@ -26,6 +26,15 @@
       </button>
     </div>
     <div ng-show='vm.data.email' class='strabo-form'>
+      <div class='padding' ng-click='vm.addImage()'>
+        <div ng-hide='vm.data.image'>
+          <img src='img/ninja.png'>
+        </div>
+        <div ng-show='vm.data.image'>
+          <img class='profile-image' ng-src='{{vm.data.image}}'>
+        </div>
+      </div>
+      <input type='file' id='file' style='display: none;'/>
       <ion-input class='item item-input item-stacked-label'>
         <ion-label>Name</ion-label>
         <input type='text' placeholder='John Doe' ng-model='vm.data.name'>
