--- a/www/app/user/user.html
+++ b/www/app/user/user.html
@@ -3,6 +3,13 @@
     <button menu-toggle='left' ng-click='vm.submit();' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
+    <ion-refresher
+      pulling-text="Pull to refresh..."
+      on-refresh="vm.doRefresh()">
+    </ion-refresher>
+    <div ng-show='vm.showOfflineWarning' class='text-center'>
+      <i class='icon button-large ion-alert-circled'></i>Unable to connect
+    </div>
     <div class='padding' ng-show='vm.data.email'>
       <small>You are currently logged in as: {{ vm.data.email }}</small>
     </div>
