--- a/www/app/map/image-basemap.html
+++ b/www/app/map/image-basemap.html
@@ -4,7 +4,7 @@
     <button ng-click='vm.goBack();' class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <button ng-click='vm.showActionsheet()' class='button button-icon icon ion-arrow-up-b'></button>
+    <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
   </ion-nav-buttons>
   <ion-pane data-tap-disabled='true'>
     <div id='mapdiv' style='height:100%'></div>
