--- a/www/app/spot/spots.html
+++ b/www/app/spot/spots.html
@@ -13,7 +13,7 @@
       ng-click='vm.sync()'>
     </button>
     <button class='button button-icon ion-plus' ng-click='vm.newSpot()'></button>
-    <button ng-click='vm.showActionsheet()' class='button button-icon icon ion-arrow-up-b'></button>
+    <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
     <div class='padding' ng-show='vm.spots.length === 0'>
