--- a/www/app/user/login.html
+++ b/www/app/user/login.html
@@ -23,7 +23,7 @@
           </a>
         </div>
       </div>
-      <span class='caption'>Petrified Forest National Park</span>
+     <!-- <span class='caption'>Petrified Forest National Park</span> -->
       <button class='button icon-left button-positive button-small ion-forward pull-right skip' ng-click='vm.skip()'>
         Skip
       </button>
