--- a/www/app/user/login.html
+++ b/www/app/user/login.html
@@ -18,12 +18,11 @@
           </button>
         </div>
         <div align='center'>
-          <a href='#' onclick='window.open("http://strabospot.org/register", "_system", "location=yes"); return false;'>
-            <span class='create-account-text'>Create an account</span>
+          <a class='create-account-text' href='#' onclick='window.open("http://strabospot.org/register", "_system", "location=yes"); return false;'>
+            Create an account
           </a>
         </div>
       </div>
-     <!-- <span class='caption'>Petrified Forest National Park</span> -->
       <button class='button icon-left button-positive button-small ion-forward pull-right skip' ng-click='vm.skip()'>
         Skip
       </button>
