--- a/www/app/spot/spots-popover.html
+++ b/www/app/spot/spots-popover.html
@@ -1,7 +1,7 @@
 <ion-popover-view class='fit'>
   <ion-content scroll='false'>
     <ion-list>
-      <ion-item ng-click='vm.clearAllSpots()'>
+      <ion-item ng-click='vm.deleteAllActiveSpots()'>
         <i class="icon ion-trash-b"></i> Delete All Spots
       </ion-item>
       <ion-item ng-click='vm.exportToCSV()'>
