--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <title>Strabo Mobile</title>
 
     <!-- underscore -->
-    <script src="lib/underscore-1.7.0.js"></script>
+    <script src="lib/underscore.js"></script>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -68,10 +68,8 @@
     <script src="app/project/manage-project.controller.js"></script>
     <script src="app/project/preferences.controller.js"></script>
     <script src="app/project/project.controller.js"></script>
-    <script src="app/project/projects.controller.js"></script>
     <script src="app/project/rock-unit.controller.js"></script>
     <script src="app/project/tools.controller.js"></script>
-    <script src="app/remote-connection/sync-modal.controller.js"></script>
     <script src="app/spot/spot.controller.js"></script>
     <script src="app/spot/spots.controller.js"></script>
     <script src="app/user/login.controller.js"></script>
