--- a/www/app/spot/spots.html
+++ b/www/app/spot/spots.html
@@ -8,16 +8,12 @@
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <button
-      ng-class='{"button button-icon ion-loop": vm.isOnlineLoggedIn(), "button button-icon ion-alert-circled": !vm.isOnlineLoggedIn()}'
-      ng-click='vm.sync()'>
-    </button>
     <button class='button button-icon ion-plus' ng-click='vm.newSpot()'></button>
     <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
     <div class='padding' ng-show='vm.spots.length === 0'>
-      No Spots added yet. Add a spot using the '+' button in the top right or by drawing a point, line or polygon on the
+      No Spots added to any of the active datasets yet. Add a spot using the '+' button in the top right or by drawing a point, line or polygon on the
       Main Map page.
     </div>
     <ion-list>
