--- a/www/app/project/manage-project.html
+++ b/www/app/project/manage-project.html
@@ -30,12 +30,14 @@
       Current Project
       <i class='button button-icon ion-arrow-swap' ng-click='vm.switchProject()'></i>
     </div>
-    <div class='padding' ng-hide='vm.showProject'>
-      No Project Set Yet
-    </div>
-    <div class='padding' ng-show='vm.showProject'>
-      {{ vm.project.description.project_name }}
-    </div>
+    <ion-item>
+      <div class='padding' ng-hide='vm.showProject'>
+        No Project Set Yet
+      </div>
+      <div ng-show='vm.showProject'>
+        {{ vm.project.description.project_name }}
+      </div>
+    </ion-item>
     <div class='field-group item item-divider'>
       Datasets
       <i class='button button-icon ion-plus' ng-click='vm.newDataset()'></i>
@@ -64,7 +66,9 @@
     </ion-list>
     <ion-input class='item item-input item-select item-text-wrap' ng-hide='vm.areDatasetsOn()'>
       <ion-label>Dataset for New Spots:</ion-label>
-      <select><option>First turn On a Dataset Above</option></select>
+      <select>
+        <option>First turn On a Dataset Above</option>
+      </select>
     </ion-input>
     <ion-input class='item item-input item-select item-text-wrap' ng-show='vm.areDatasetsOn()'>
       <ion-label>Dataset for New Spots:</ion-label>
