--- a/www/app/spot/spots-filter-modal.html
+++ b/www/app/spot/spots-filter-modal.html
@@ -4,6 +4,9 @@
     <h1 class='title'>Filter</h1>
   </ion-header-bar>
   <ion-content class='has-header'>
+    <div class='field-group item item-divider'>
+      Datasets
+    </div>
     <ion-checkbox ng-repeat='dataset in vm.activeDatasets'
                   ng-checked='vm.isDatasetChecked(dataset.id)'
                   ng-click='vm.checkedDataset(dataset.id)'>
