--- a/www/app/spot/spot.html
+++ b/www/app/spot/spot.html
@@ -73,6 +73,12 @@ navigation history that also transitions its views in and out.
         Nest
       </a>
     </span>
+    <span>
+      <a class='button button-clear spot-tab-inactive'
+         href='#/app/preferences'>
+        More
+      </a>
+    </span>
   </ion-scroll>
 </ion-header-bar>
 
